# julia-visualizer

./: .clang-format  .clang-tidy  .codespellrc  .gitignore  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  conanfile.py  conanfile.txt
.github/scripts/: conan-ci-setup.sh
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  glad.cmake  imgui.cmake  install-rules.cmake  variables.cmake
glad/include/glad/: gl.h
source/: application.cpp  application.hpp  main.cpp  renderer.cpp  renderer.hpp  runtimedata.cpp  runtimedata.hpp  shader.cpp  shader.hpp  window.cpp  window.hpp
source/wrappers/: renderlist.cpp  renderlist.hpp  shader.cpp  shader.hpp
test/: CMakeLists.txt
